# hpmpc

./: .gitignore  CMakeLists.txt  CompilerOptions.cmake  Makefile  Makefile.rule  README.md  README.txt  TODO_LIST.txt  problem_size.h  target_generator.c
auxiliary/: CMakeLists.txt  Makefile  aux_d_c99.c  aux_d_c99_lib2.c  aux_d_c99_lib4.c  aux_s_c99.c  aux_s_c99_lib2.c  aux_s_c99_lib4.c  aux_s_c99_lib8.c  block_size_atom.c  block_size_avx.c  block_size_c99_2x2.c  block_size_c99_4x4.c  block_size_ppc.c  block_size_x64_avx.c  block_size_x64_avx_lib8.c  d_aux_extern_depend_lib4.c  d_aux_lib4.c  i_aux.c  s_aux_lib4.c  s_aux_lib8.c
auxiliary/avx/: CMakeLists.txt
auxiliary/c99/: CMakeLists.txt  Makefile  d_aux_aux_avx_lib4.c  d_aux_aux_c99_lib4.c
codegen/: CMakeLists.txt  Makefile  blas_d_codegen.h  blas_s_codegen.h  code_generator_blas_d_atom_lib2.c  code_generator_blas_d_avx_lib4.c  code_generator_blas_d_c99_2x2_lib2.c  code_generator_blas_d_c99_4x4_lib4.c  code_generator_blas_d_lib2.c  code_generator_blas_d_lib4.c  code_generator_blas_d_neon_lib4.c  code_generator_blas_d_ppc_lib4.c  code_generator_blas_d_sse_lib4.c  code_generator_blas_s_atom_lib4.c  code_generator_blas_s_c99_2x2_lib2.c  code_generator_blas_s_c99_4x4_lib4.c  code_generator_blas_s_lib2.c  code_generator_blas_s_lib4.c  code_generator_blas_s_neon_lib4.c  code_generator_blas_s_ppc_lib4.c  code_generator_d_ric_sv.c  code_generator_dricposv.c  code_generator_s_ric_sv.c  code_generator_sricposv.c  dricposv_codegen.c  problem_size.h  sricposv_codegen.c
kernel/: CMakeLists.txt  Makefile  corner_dpotrf_c99_lib2.c  corner_dpotrf_c99_lib4.c  corner_dpotrf_sse2_lib4.c  corner_dpotrf_sse_lib4.c  corner_dtrmm_avx_lib4.c  corner_dtrmm_c99_lib2.c  corner_dtrmm_c99_lib4.c  corner_dtrmm_sse3_lib4.c  corner_dtrmm_sse_lib4.c  corner_spotrf_c99_lib2.c  corner_spotrf_c99_lib4.c  corner_strmm_c99_lib2.c  corner_strmm_c99_lib4.c  corner_strmm_sse_lib4.c  kernel_dgemm_amd_sse3_lib4.c  kernel_dgemm_atom_lib2.c  kernel_dgemm_avx_lib4.c  kernel_dgemm_c99_lib2.c  kernel_dgemm_c99_lib4.c  kernel_dgemm_neon_lib4.c  kernel_dgemm_ppc_g2_lib4.c  kernel_dgemm_sse3_lib4.c  kernel_dgemm_sse4_lib4.c  kernel_dgemm_sse_lib4.c  kernel_dgemv_avx_lib4.c  kernel_dgemv_c99_lib2.c  kernel_dgemv_c99_lib4.c  kernel_dgemv_sse3_lib4.c  kernel_dgemv_sse_lib4.c  kernel_dpotrf_avx_lib4.c  kernel_dpotrf_c99_lib2.c  kernel_dpotrf_c99_lib4.c  kernel_dpotrf_sse3_lib4.c  kernel_dpotrf_sse_lib4.c  kernel_dsymv_avx_lib4.c  kernel_dsymv_c99_lib2.c  kernel_dsymv_c99_lib4.c  kernel_dtrmm_avx_lib4.c  (+22 more)
kernel/armv7a/: CMakeLists.txt  Makefile  kernel_dcopy_c99_lib4.c  kernel_dgemm_vfpv3_lib4.c  kernel_dgemv_c99_lib4.c  kernel_dpotrf_vfpv3_lib4.c  kernel_dsymv_c99_lib4.c  kernel_dsyrk_vfpv3_lib4.c  kernel_dtran_c99_lib4.c  kernel_dtrinv_c99_lib4.c  kernel_dtrmm_vfpv3_lib4.c  kernel_dtrsm_vfpv3_lib4.c  kernel_dtrsv_c99_lib4.c  kernel_dttmm_c99_lib4.c
kernel/armv8a/: CMakeLists.txt  Makefile  kernel_dgemm_neon_assembly_lib4.S  kernel_dgemm_neon_lib4.c  kernel_sgemm_neon_assembly_lib4.S
kernel/avx/: CMakeLists.txt  Makefile  kernel_dcopy_avx_lib4.c  kernel_dgemm_avx_lib4.c  kernel_dgemm_dtrsm_avx_lib4.c  kernel_dgemv_avx_lib4.c  kernel_dgetrf_avx_lib4.c  kernel_dpotrf_avx_lib4.c  kernel_dsymv_avx_lib4.c  kernel_dsyrk_avx_lib4.c  kernel_dsyrk_dpotrf_avx_lib4.c  kernel_dtran_avx_lib4.c  kernel_dtrinv_avx_lib4.c  kernel_dtrinv_c99_lib4.c  kernel_dtrmm_avx_lib4.c  kernel_dtrmv_avx_lib4.c  kernel_dtrsm_avx_lib4.c  kernel_dtrsv_avx_lib4.c  kernel_dttmm_avx_lib4.c  kernel_dttmm_c99_lib4.c  kernel_sgemm_avx_lib8.c  kernel_sgemm_strsm_avx_lib8.c  kernel_sgemv_avx_lib8.c  kernel_sgemv_c99_lib8.c  kernel_spotrf_avx_lib8.c  kernel_ssymv_avx_lib8.c  kernel_ssymv_c99_lib8.c  kernel_ssyrk_spotrf_avx_lib8.c  kernel_stran_avx_lib8.c  kernel_strmm_avx_lib8.c  kernel_strmv_avx_lib8.c  kernel_strmv_c99_lib8.c  kernel_strsm_avx_lib8.c  kernel_strsv_avx_lib8.c  kernel_strsv_c99_lib8.c
kernel/avx2/: CMakeLists.txt  Makefile  kernel_dcopy_avx_lib4.c  kernel_dgemm_avx2_lib4.c  kernel_dgemm_dtrsm_avx_lib4.c  kernel_dgemv_avx2_lib4.c  kernel_dgemv_avx_lib4.c  kernel_dgetrf_avx2_lib4.c  kernel_dpotrf_avx2_lib4.c  kernel_dpotrf_avx2_lib4.s  kernel_dpotrf_avx_lib4.c  kernel_dsymv_avx2_lib4.c  kernel_dsymv_avx_lib4.c  kernel_dsyrk_avx2_lib4.c  kernel_dsyrk_avx_lib4.c  kernel_dsyrk_dpotrf_avx_lib4.c  kernel_dtran_avx2_lib4.c  kernel_dtran_avx_lib4.c  kernel_dtrinv_avx2_lib4.c  kernel_dtrinv_avx2_lib4.s  (+22 more)
kernel/c99/: Makefile  (+31 more)
mpc_solvers/: CMakeLists.txt  Makefile  d_admm_box.c  d_admm_soft.c  d_aux_ip_avx.c  d_aux_ip_avx_lib4.c  d_aux_ip_c99.c  d_aux_ip_c99_lib4.c  d_ip2_box.c  d_ip2_hard.c  d_ip2_res_hard.c  d_ip2_res_hard_libstr.c  d_ip2_soft.c  d_ip_box.c  d_ip_box2.c  d_ip_hard.c  d_ip_soft.c  d_res_ip_box.c  d_res_ip_hard.c  d_res_ip_res_hard.c  d_res_ip_res_hard_libstr.c  d_res_ip_soft.c  d_tree_ip2_res_hard_libstr.c  d_tree_res_ip_res_hard_libstr.c  dres_ip_box.c  ip_d_box.c  s_admm_box.c  s_admm_soft.c  s_aux_ip_avx_lib8.c  s_aux_ip_c99_lib4.c  s_aux_ip_c99_lib8.c  s_ip2_box.c  s_ip_box.c  s_res_ip_box.c  sres_ip_box.c
test/: CMakeLists.txt  Makefile  hpmpc_test.cpp  hpmpc_to_casadi.m  hpmpc_to_quadprog.m  kkt_matrix.m  solve_with_casadi.m  test_dgemm.c  test_dgemm_orig.c  test_failed_qp.c  test_qp.c  test_qp.cpp
test_problems/: CMakeLists.txt  Makefile  test_blas_d.c  test_blas_d_debug.c  test_blas_d_orig.c  test_blas_s.c  test_blas_s_debug.c  test_blas_s_orig.c  test_d_admm_box.c  test_d_admm_soft.c  test_d_cond.c  test_d_cond_fact.c  test_d_cond_libstr.c  test_d_cond_mpc.c  test_d_fact.c  test_d_forward_schur.c  test_d_ip_box.c  test_d_ip_diag_box.c  test_d_ip_hard.c  test_d_ip_hard_car_new_libstr.c  test_d_ip_hard_libstr.c  test_d_ip_soft.c  test_d_part_cond.c  test_d_ric_libstr.c  test_d_ric_mhe.c  test_d_ric_mpc.c  test_d_ric_mpc_tim.c  test_d_ric_sv.c  test_d_tight_ric_libstr.c  test_d_tree_ip_hard_libstr.c  test_d_tree_ric_libstr.c  test_dgemm.c  test_dgemm_orig.c  test_dricposv.c  test_ip_box_lib.c  test_lu_fact.c  test_param.h  test_s_admm_box.c  test_s_admm_soft.c  test_s_ip_box.c  (+7 more)
(+207 files in other folders)
