
IF ( ${HPMPC_TARGET} STREQUAL "X64_AVX2" )
    ADD_SUBDIRECTORY( avx2 )

ELSEIF ( ${HPMPC_TARGET} STREQUAL "X64_AVX" )
    ADD_SUBDIRECTORY( avx )

ELSEIF ( ${HPMPC_TARGET} STREQUAL "X64_SSE3" )
    ADD_SUBDIRECTORY( sse3 )

ELSEIF ( ${HPMPC_TARGET} STREQUAL "CORTEX_A15" )
    ADD_SUBDIRECTORY( neon )

ELSEIF ( ${HPMPC_TARGET} STREQUAL "CORTEX_A9" )
    ADD_SUBDIRECTORY( neon )

ELSEIF ( ${HPMPC_TARGET} STREQUAL "CORTEX_A7" )
    ADD_SUBDIRECTORY( neon )

ELSEIF ( ${HPMPC_TARGET} STREQUAL "C99_4x4" )
    ADD_SUBDIRECTORY( c99 )

ELSE( )
    MESSAGE( ERROR "Impossible happened!" )
ENDIF( )

SET ( SOURCES ${SOURCES} PARENT_SCOPE )
