
IF ( ${HPMPC_TARGET} STREQUAL "X64_AVX2" )
    ADD_SUBDIRECTORY( avx )

ELSEIF ( ${HPMPC_TARGET} STREQUAL "X64_AVX" )
    ADD_SUBDIRECTORY( avx )

ELSEIF ( ${HPMPC_TARGET} STREQUAL "X64_SSE3" )
    ADD_SUBDIRECTORY( c99 )

ELSEIF ( ${HPMPC_TARGET} STREQUAL "CORTEX_A15" )
    ADD_SUBDIRECTORY( c99 )

ELSEIF ( ${HPMPC_TARGET} STREQUAL "CORTEX_A9" )
    ADD_SUBDIRECTORY( c99 )

ELSEIF ( ${HPMPC_TARGET} STREQUAL "CORTEX_A7" )
    ADD_SUBDIRECTORY( c99 )

ELSEIF ( ${HPMPC_TARGET} STREQUAL "C99_4X4" )
    ADD_SUBDIRECTORY( c99 )

ELSE( )
    MESSAGE( ERROR "Impossible happened!" )
ENDIF( )

file(GLOB src *.c)

HPMPC_ADD_SOURCE_FILES(${src})
